# halftone

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: generate_demo.py
src/halftone/: __init__.py  cli.py  core.py
tests/: test_core.py
