[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halftone"
version = "0.1.0"
description = "Turn images into classic newspaper-style halftone prints."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Trolzie", email = "tch@secomea.com" }]
keywords = ["halftone", "image", "newspaper", "printing", "dots", "dithering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = ["Pillow>=10.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
halftone = "halftone.cli:main"

[project.urls]
Homepage = "https://github.com/Trolzie/halftone"
Issues = "https://github.com/Trolzie/halftone/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/halftone"]
